--- a/src/lib/components/home/Sidebar.module.css
+++ b/src/lib/components/home/Sidebar.module.css
@@ -58,6 +58,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  
 
   border-radius: 10px;
 
@@ -104,12 +105,12 @@
 }
 
 .adminIcon {
-  width: 16px;
-  height: 16px;
   position: relative;
   display: inline-block;
   background: white;
   border-radius: 2px;
+  top: 4px;
+
 }
 
 .adminIcon::before {
