--- a/src/app/home/administrare/administrarePage.module.css
+++ b/src/app/home/administrare/administrarePage.module.css
@@ -1,13 +1,13 @@
 .administrareContainer {
   width: 100%;
   height: 100%;
-  min-height: calc(100vh - 80px);
+  min-height: 80vh;
 
   padding: 20px 20px 20px 100px;
   gap: 70px;
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -88,8 +88,7 @@
 /* Tablet styles */
 @media (max-width: 1024px) {
   .administrareContainer {
-    min-height: calc(100vh - 70px);
-
+    min-height: calc(70vh);
     padding: 20px 40px;
     gap: 30px;
 
@@ -131,7 +130,6 @@
     padding: 15px 20px;
     gap: 25px;
 
-    justify-content: center;
   }
 
   .card {
