--- a/src/app/home/inchiriere/formInchiriere.module.css
+++ b/src/app/home/inchiriere/formInchiriere.module.css
@@ -58,6 +58,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom: 40px;
 }
 .formButtonContainer 
 {
