--- a/src/lib/components/home/echipamente/ProdusListing.module.css
+++ b/src/lib/components/home/echipamente/ProdusListing.module.css
@@ -7,6 +7,7 @@
     border-bottom: 1px var(--border-gray);
     background-color: var(--background);
     color: var(--foreground);
+    cursor: pointer;
   }
 
   .imageWrapper {
