--- a/src/lib/components/home/Sidebar.module.css
+++ b/src/lib/components/home/Sidebar.module.css
@@ -68,6 +68,10 @@
   user-select: none;
 }
 
+.adminNavItem {
+  background-color: var(--foreground);
+}
+
 .active {
   background-color: var(--foreground);
   color: var(--background);
@@ -97,4 +101,52 @@
 
   color: var(--background);
   font-weight: bold;
+}
+
+.adminIcon {
+  width: 24px;
+  height: 24px;
+
+  position: relative;
+
+  display: inline-block;
+  
+  border-radius: 2px;
+
+  background: white;
+}
+
+.adminIcon::before {
+  width: 10px;
+  height: 10px;
+ 
+  position: absolute;
+  top: 2px;
+  left: 3px;
+ 
+  border: 2px solid #000;
+  border-radius: 1px;
+
+  content: '';
+}
+
+.adminIcon::after {
+  width: 6px;
+  height: 6px;
+  
+  position: absolute;
+  top: 4px;
+  left: 5px;
+ 
+  border-radius: 1px;
+
+  background: #000;
+
+  content: '';
+}
+
+.adminText {
+  margin-left: -4px; 
+
+  color: var(--background);
 }
