--- a/src/lib/components/home/Sidebar.module.css
+++ b/src/lib/components/home/Sidebar.module.css
@@ -70,7 +70,7 @@
 }
 
 .adminNavItem {
-  background-color: var(--foreground);
+  background-color: #FF4A4A;
 }
 
 .active {
@@ -105,20 +105,32 @@
 }
 
 .adminIcon {
-  width: 24px;
-  height: 24px;
-
   position: relative;
-
   display: inline-block;
-  
-  border-radius: 2px;
-
   background: white;
+  border-radius: 2px;
+  top: 4px;
+
 }
 
-.adminText {
-  margin-left: -4px; 
+.adminIcon::before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 3px;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #000;
+  border-radius: 1px;
+}
 
-  color: var(--background);
+.adminIcon::after {
+  content: '';
+  position: absolute;
+  top: 4px;
+  left: 5px;
+  width: 6px;
+  height: 6px;
+  background: #000;
+  border-radius: 1px;
 }
