--- a/src/app/rootPage.module.css
+++ b/src/app/rootPage.module.css
@@ -22,20 +22,18 @@
 
 .authButtonsContainer {
     padding-top: 30px;
-
+    margin-top: 20px;
 
     display: flex;
     flex-flow: row nowrap;
-    gap: 20px;
-
-    margin-top: 20px;
+    gap: 30px;
 
 }
 
 .authButtonWrapper {
-    width: 200px;
+    width: 230px;
 
-    padding: 13px 30px;
+    padding: 13px;
 
     display: flex;
     align-items: center;
@@ -49,6 +47,9 @@
     color: white;
 
     text-decoration: none;
+
+    cursor: pointer;
+    user-select: none;
 }
 
 .usefulLinksContainer > li {
