--- a/src/app/rootPage.module.css
+++ b/src/app/rootPage.module.css
@@ -25,7 +25,9 @@
     margin-top: 20px;
 
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
     gap: 30px;
 
 }
