--- a/src/lib/components/home/echipamente/ProdusListing.module.css
+++ b/src/lib/components/home/echipamente/ProdusListing.module.css
@@ -1,80 +1,91 @@
 .row {
-    width: 100%;
-    padding: 16px 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px var(--border-gray);
-    background-color: var(--background);
-    color: var(--foreground);
-  }
+	width: 100%;
+	min-height: 50px;
+	
+	padding: 16px 0;
+	margin: 0;
+	
+	display: flex;
+	align-items: center;
+	
+	border-bottom: 1px var(--border-gray);
+	background-color: var(--background);
+	
+	color: var(--foreground);
+}
 
-  .imageWrapper {
-    width: 50px;
-    height: 50px;
-    margin-right: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-  }
-  
-  .placeholder {
-    width: 100%;
-    height: 100%;
-    background: #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-    color: black;
-    border-radius: 4px;
-  }
-  
-  .cell {
-    flex: 1;
-    padding: 0 12px;
-    white-space: nowrap;
-    font-size: var(--font-size-base);
-  }
-  
-  .header {
-    border-bottom: 1px var(--border-gray);
-    font-size: var(--font-size-base);
-  }
-  
-  .icon {
-    width: 40px;
-    padding: 0 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-  
-  .icon svg {
-    width: 18px;
-    height: 18px;
-    stroke: #2563eb;
-    stroke-width: 2;
-    fill: none;
-  }
-  
-  @media (max-width: 1150px){
-    .cell, .header {
-      font-size: var(--font-size-sm);
-    }
-  }
-  
-  @media (max-width: 860px) {
-    .cell, .header {
-      font-size: var(--font-size-xs);
-    }
-  }
-  
+.imageWrapper {
+	width: 50px;
+	height: 50px;
+	margin-right: 16px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 4px;
+}
+
+.placeholder {
+	width: 100%;
+	height: 100%;
+	background: #ccc;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 10px;
+	color: black;
+	border-radius: 4px;
+}
+
+.cell {
+	flex: 1;
+	padding: 0 12px;
+	white-space: nowrap;
+	font-size: var(--font-size-base);
+}
+
+.header {
+	border-bottom: 1px var(--border-gray);
+	font-size: var(--font-size-base);
+}
+
+.icon {
+	width: 40px;
+	padding: 0 12px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+}
+
+.icon svg {
+	width: 18px;
+	height: 18px;
+	stroke: #2563eb;
+	stroke-width: 2;
+	fill: none;
+}
+
+@media (max-width: 1400px) {
+	.cell,
+	.header {
+		font-size: var(--font-size-sm);
+	}
+}
+
+@media (max-width: 1245px) {
+	.cell,
+	.header {
+		font-size: var(--font-size-xs);
+	}
+}
+@media (max-width: 1245px) {
+	.imageWrapper {
+		display: none;
+	}
+}
