--- a/src/lib/components/home/echipamente/SearchAndFilter.module.css
+++ b/src/lib/components/home/echipamente/SearchAndFilter.module.css
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-flow: row nowrap;
 
-  color: #3d3d3d;
+	color: #3d3d3d;
 
 	gap: 32px;
 }
@@ -26,7 +26,7 @@
 	justify-content: space-between;
 	align-items: flex-start;
 
-  gap: 15px;
+	gap: 15px;
 }
 .componentTitle {
 	font-size: var(--font-size-lg);
@@ -41,16 +41,18 @@
 	gap: 15px;
 }
 
-
 .filtersColumn {
-	width: 310px;
+	width: 260px !important;
+	
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	
+	gap: 10px;
 }
 
 .filterSection {
-	width: 306px;
+	width: 250px;
+
 	background-color: #ffffff;
 	padding: 20px 20px;
 	border-radius: 5px;
@@ -75,13 +77,13 @@
 }
 
 .dropdownArrow {
-  width: 12px;
+	width: 12px;
 	font-size: 12px;
 	color: #73287e;
 
 	user-select: none;
-  cursor: pointer;
-  transition: transform 0.3s ease;
+	cursor: pointer;
+	transition: transform 0.3s ease;
 }
 
 .dropdownArrow.rotated {
@@ -143,4 +145,29 @@
 	width: 18px;
 	height: 18px;
 	object-fit: contain;
+}
+
+@media (max-width: 860px) {
+	.searchAndFilterContainer {
+		flex-direction: column;
+	}
+
+	.queryAndDataColumn {
+		width: 100%;
+	}
+
+	.filtersColumn {
+		width: fit-content !important;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+	
+	.searchHeader {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	
+	.dataContainer {
+		flex-direction: column;
+	}
 }
