--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
   --foreground: #09090B;
   --border-gray: #e4e4e7;
   --text-gray:  #71717A;
-  --busy-red: #FF426B;
+  --busy-red: #e62e3d;
   --font-size-lg: 30px;
   --font-size-md: 24px;
   --font-size-base: 18px;
