--- a/src/app/auth/confirm-mail/confirmMail.module.css
+++ b/src/app/auth/confirm-mail/confirmMail.module.css
@@ -89,6 +89,9 @@
 .backToLogin {
 	width: 100%;
 }
+.backToLogin a {
+	text-decoration: none;
+}
 
 .backToLoginButton {
 	width: 100%;
@@ -114,6 +117,8 @@
 	cursor: pointer;
 	box-sizing: border-box;
 	transition: background-color 0.2s ease;
+
+	text-decoration: none;
 }
 
 .backToLoginButton:hover {
